corpus/baselines/compiler/jsdocParameterParsingInfiniteLoop.errors.txt
example.js(3,19): error TS1005: '}' expected.


==== example.js (1 errors) ====
    // @ts-check
    /**
     * @type {function(@foo)}
                      ~
!!! error TS1005: '}' expected.
     */
    let x;